--- a/src/ListTile.scss
+++ b/src/ListTile.scss
@@ -5,7 +5,10 @@
   position: relative;
   cursor: pointer;
   z-index: 1;
-  padding: 0.5rem 1rem;
+  flex: 1;
+  padding: $list-tile-padding-y $list-tile-padding-x;
+  min-width: $avatar-width;
+  min-height: $avatar-height;
 
   /* Pseudo-element for highlighting */
   &::before {
@@ -45,23 +48,13 @@
   // Avatar el
   &__avatar {
     width: $avatar-width;
-    min-width: $avatar-width;
     height: $avatar-height;
-    min-height: $avatar-height;
-    display: flex;
-    display: inline-block;
-    // background-size: cover;
-    // overflow: hidden;
+    border-radius: 50%;
+    overflow: hidden;
 
     &__image {
-      // background-size: cover;
-      // background-repeat: no-repeat;
-      // background-position: center;
-      display: inline-block;
       width: 100%;
       height: 100%;
-      max-width: 100%;
-      max-height: 100%;
     }
   }
 
