--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -12,6 +12,8 @@ $cancel-btn-bg: #f7f7f7;
 $save-btn-bg: $primary;
 
 // Sizes
-$avatar-width: 3rem;
-$avatar-height: 3rem;
+$avatar-width: 3.5rem;
+$avatar-height: 3.5rem;
 $list-tile-height: 4rem;
+$list-tile-padding-y: 0.5rem;
+$list-tile-padding-x: 1rem;
